# Voidfall

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/tests/: conftest.py  test_api.py  test_cache.py  test_ecs.py  test_freeform.py  test_gameplay.py  test_parser.py  test_progression.py  test_properties.py  test_rng.py  test_scenarios.py  test_serialization.py
backend/voidfall/: __init__.py
backend/voidfall/app/: __init__.py  api.py  assets.py  auth.py  cache.py  config.py  db.py  game_service.py  main.py  schemas.py
backend/voidfall/content/: __init__.py  scenarios.py  world_seed.py
backend/voidfall/domain/: __init__.py  actions.py  components.py  effects.py  engine.py  events.py  progression.py  quests.py  rng.py  serialization.py  stats.py  world.py
backend/voidfall/domain/systems/: __init__.py  combat.py  inventory.py  movement.py
backend/voidfall/narration/: __init__.py  ansi.py  ascii_art.py  interpreter.py  llm.py
backend/voidfall/narration/providers/: __init__.py  base.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
backend/voidfall/parser/: __init__.py  parser.py
docs/: ARCHITECTURE.md  README.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/audio/: SoundEngine.ts
frontend/src/components/: AuthModal.tsx  Backpack.tsx  Bar.tsx  CommandInput.tsx  (+11 more)
(+11 files in other folders)
