[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voidfall"
version = "0.1.0"
description = "VOIDFALL — a Natural Language RPG Engine with an authoritative deterministic core."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "VOIDFALL contributors" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "SQLAlchemy>=2.0",
    "PyJWT>=2.8",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
prod = [
    "psycopg[binary]>=3.1",
    "redis>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["voidfall*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's `Depends(...)` in defaults is the idiomatic pattern.
# UP042: `(str, Enum)` is intentional for JSON-friendly, broadly-compatible enums.
ignore = ["B008", "UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
